--- a/index.html
+++ b/index.html
@@ -77,7 +77,97 @@
         </div>
     </header>
     <main>
+        <!-- Featured Products -->
+        <section class="my-24 container px-5">
+            <div class="text-center mb-12">
+                <h2 class="font-extrabold text-5xl mb-5">Our Featured Products</h2>
+                <p class="max-w-4xl mx-auto font-medium text-gray-400">There are many variations of passages of Lorem
+                    Ipsum
+                    available, but the
+                    majority have
+                    suffered alteration
+                    in some form, by injected humour, or randomized words which don't look even slightly believable.
+                </p>
+            </div>
+            <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-4 gap-5">
+                <div class="card bg-gradient-to-b from-[#F4F4F4] from-0% to-[#ffffff] to-100%">
+                    <figure class="px-10 pt-10">
+                        <img src="./images/tea-1.png" alt="Milk tea" class="rounded-xl" />
+                    </figure>
+                    <div class="card-body items-center text-center">
+                        <h2 class="card-title font-extrabold text-2xl">Milk Tea</h2>
+                        <p class="font-semibold text-gray-400">Creamer could be replaced <br> by fresh milk</p>
 
+                    </div>
+                </div>
+                <div class="card bg-gradient-to-b from-[#F4F4F4] from-0% to-[#ffffff] to-100%">
+                    <figure class="px-10 pt-10">
+                        <img src="./images/tea-2.png" alt="Black Tea" class="rounded-xl" />
+                    </figure>
+                    <div class="card-body items-center text-center">
+                        <h2 class="card-title font-extrabold text-2xl">Black Tea</h2>
+                        <p class="font-semibold text-gray-400">Creamer could be replaced <br> by fresh milk</p>
+
+                    </div>
+                </div>
+                <div class="card bg-gradient-to-b from-[#F4F4F4] from-0% to-[#ffffff] to-100%">
+                    <figure class="px-10 pt-10">
+                        <img src="./images/tea-3.png" alt="Lemon Tea" class="rounded-xl" />
+                    </figure>
+                    <div class="card-body items-center text-center">
+                        <h2 class="card-title font-extrabold text-2xl">Lemon Tea</h2>
+                        <p class="font-semibold text-gray-400">Creamer could be replaced <br> by fresh milk</p>
+
+                    </div>
+                </div>
+                <div class="card bg-gradient-to-b from-[#F4F4F4] from-0% to-[#ffffff] to-100%">
+                    <figure class="px-10 pt-10">
+                        <img src="./images/tea-4.png" alt="Green Tea" class="rounded-xl" />
+                    </figure>
+                    <div class="card-body items-center text-center">
+                        <h2 class="card-title font-extrabold text-2xl">Green Tea</h2>
+                        <p class="font-semibold text-gray-400">Creamer could be replaced <br> by fresh milk</p>
+
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <!-- Great Tea section -->
+        <section class="my-24 container px-5">
+            <div class="flex flex-col lg:flex-row gap-12">
+                <div class="grid grid-cols-1 lg:grid-cols-2 flex-1 gap-7">
+                    <div class="h-32 rounded-xl bg-gradient-to-r from-[#F00] from-0% to-[#FF8938] to-100% opacity-10">
+                    </div>
+                    <div class="flex justify-center items-center row-span-2 p-11 bg-[#e6a6231a]"><img
+                            src="./images/fresh-1.png" alt="">
+                    </div>
+                    <div class="flex justify-center items-center row-span-2 p-11 bg-[#5776391a] "><img
+                            src="./images/fresh-2.png" alt=""></div>
+                    <div class="h-32 rounded-xl bg-gradient-to-r from-[#D9D9D9] from-0% to-[#FFFFFFAA] to-100%">
+                    </div>
+                </div>
+                <div class="flex-1 ">
+                    <h2 class="font-extrabold text-5xl mb-5">Great Tea, Freshly Presented</h2>
+                    <p class="font-medium text-gray-400 mb-7">The meaning of gong cha is chanese is to provide the best
+                        tea
+                        to
+                        emperor from all possessions . It represents the highest quality and self expectation.
+                        Establishing
+                        in 2006, Gong cha had been deeply appreciated by its custoers because of good words of mouth and
+                        unique customized service orginated from Taiwan.
+                    </p>
+                    <h4 class="font-extrabold text-xl mb-3">Unique Taste</h4>
+                    <p class="text-gray-400 mb-5">A Unique and different style from other teapots gives a luxurious and
+                        minimalist impression
+                    </p>
+                    <h4 class="font-extrabold text-xl mb-3">Premium Quality</h4>
+                    <p class="text-gray-400">Premium Quality that makes tea more elegant and more durable when you use
+                        it.
+                    </p>
+                </div>
+            </div>
+        </section>
     </main>
 </body>
 
