--- a/index.html
+++ b/index.html
@@ -168,6 +168,70 @@
                 </div>
             </div>
         </section>
+
+        <!-- Client Section -->
+        <section class="container mx-auto flex flex-col lg:flex-row gap-14 items-center
+        bg-gradient-to-r from-[#FF8938] to-[#F00] p-5 md:px-20 md:py-24 rounded-xl
+        ">
+            <div class="text-white space-y-5 lg:pr-20">
+                <h2 class="font-extrabold text-5xl">
+                    Meet Our Super
+                    <br>
+                    Clients
+                </h2>
+                <p class="font-semibold">There are many variations of passages of Lorem Ipsum available, but the
+                    majority have suffered alteration in some form, by injected humour, or randomised words which don't
+                    look even slightly believable. </p>
+                <button class="btn btn-primary">Show All</button>
+            </div>
+            <!-- Review -->
+            <div class="relative">
+
+                <!-- next review -->
+                <div class="relative mb-14 z-0 opacity-40 w-auto md:w-[433px] p-10 bg-white rounded-xl">
+                    <img class="absolute -top-5 -left-5 border-4 bg-white rounded-full border-white"
+                        src="images/client.png" alt="client">
+                    <p class="mb-5">We are providing the best and suitable home insurance services for the people who
+                        are
+                        interested to
+                        treatment</p>
+                    <h4 class="font-bold">Ilham Yuda</h4>
+                    <p class="font-medium">Businessman</p>
+                    <div class="flex justify-end">
+                        <img src="./images/circles.png" alt="circles">
+                    </div>
+                </div>
+                <!-- current review -->
+                <div class="absolute top-32 z-10 md:-left-20 w-auto md:w-[433px] p-10 bg-white rounded-xl">
+                    <img class="absolute -top-5 -left-5 border-4 bg-white rounded-full border-white"
+                        src="images/client.png" alt="client">
+                    <p class="mb-5">We are providing the best and suitable home insurance services for the people who
+                        are
+                        interested to
+                        treatment</p>
+                    <h4 class="font-bold">Ilham Yuda</h4>
+                    <p class="font-medium">Businessman</p>
+                    <div class="flex justify-end">
+                        <img src="./images/circles.png" alt="circles">
+                    </div>
+                </div>
+                <!-- previous review -->
+                <div class="relative w-auto md:w-[433px] z-0 opacity-40 p-10 bg-white rounded-xl">
+                    <img class="absolute -top-5 -left-5 border-4 bg-white rounded-full border-white"
+                        src="images/client.png" alt="client">
+                    <p class="mb-5">We are providing the best and suitable home insurance services for the people who
+                        are
+                        interested to
+                        treatment</p>
+                    <h4 class="font-bold">Ilham Yuda</h4>
+                    <p class="font-medium">Businessman</p>
+                    <div class="flex justify-end">
+                        <img src="./images/circles.png" alt="circles">
+                    </div>
+                </div>
+            </div>
+        </section>
+
     </main>
 </body>
 
