--- a/index.html
+++ b/index.html
@@ -283,19 +283,19 @@
             </div>
         </section>
     </main>
-    <footer class="bg-gradient-to-l py-20 from-[#ff00001a] from-0% to-[#ff89381a] to-100%">
-        <div class="flex flex-col md:flex-row container items-center justify-between">
-            <div class="flex-1 pl-9">
+    <footer class="bg-gradient-to-l py-20 px-5 from-[#ff00001a] from-0% to-[#ff89381a] to-100%">
+        <div class="flex flex-col md:flex-row container items-center justify-between gap-7">
+            <div class="flex-1  lg:pl-9">
                 <img src="images/cup.png" alt="cup">
             </div>
 
-            <div class="flex flex-1 pl-9 items-center gap-10">
+            <div class="flex flex-1 lg:pl-9 items-center gap-10">
                 <p>Ready to get started?</p>
-                <button class="btn bg-gradient-to-l from-gradient-start from-0% to-gradient-end to-100%">Get
+                <button class="btn bg-gradient-to-l from-gradient-start from-0% to-gradient-end to-100% text-white">Get
                     Started</button>
             </div>
         </div>
-        <div class="footer container p-10 text-base-content">
+        <div class="footer container text-base-content">
             <div>
                 <span class="footer-title">Services</span>
                 <a class="link link-hover">Branding</a>
@@ -318,7 +318,7 @@
             </div>
             <div>
                 <span class="text-2xl font-semibold pl-1">Subscribe to our <br> newsletter</span>
-                <div class="form-control w-80">
+                <div class="form-control w-full md:w-80">
                     <label class="label">
                         <span class="label-text">Enter your email address</span>
                     </label>
@@ -326,7 +326,7 @@
                         <input type="text" placeholder="Email address"
                             class="bg-transparent py-4 border-black border-b-2 outline-none pr-16 pl-1" />
                         <button
-                            class="btn absolute bg-gradient-to-l from-gradient-start from-0% to-gradient-end to-100% top-0 text-white right-10 rounded-full"><i
+                            class="btn absolute bg-gradient-to-l from-gradient-start from-0% to-gradient-end to-100% top-0 text-white rounded-full"><i
                                 class="fa-solid fa-chevron-right"></i></button>
                     </div>
                 </div>
