--- a/index.html
+++ b/index.html
@@ -185,9 +185,14 @@
                     Clients
                 </h2>
                 <p class="font-semibold">There are many variations of passages of Lorem Ipsum available, but the
-                    majority have suffered alteration in some form, by injected humour, or randomised words which don't
+                    majority have suffered alteration in some form, by injected humour, or randomized words which don't
                     look even slightly believable. </p>
-                <button class="btn btn-primary">Show All</button>
+                <div class="bg-white btn">
+                    <button class=" bg-gradient-to-l from-orange-700 to-yellow-400 text-transparent bg-clip-text">
+                        Show More
+                    </button>
+                </div>
+
             </div>
             <!-- Review -->
             <div class="relative">
@@ -295,7 +300,7 @@
                     Started</button>
             </div>
         </div>
-        <div class="footer container text-base-content">
+        <div class="footer container text-base-content my-6">
             <div>
                 <span class="footer-title">Services</span>
                 <a class="link link-hover">Branding</a>
