fixing news images

--- a/index.html
+++ b/index.html
@@ -254,7 +254,7 @@
             <div class="grid grid-cols-1 lg:grid-cols-3 md:grid-cols-2 gap-6">
                 <div class="card bg-base-100 shadow-xl">
                     <figure class="px-4 pt-4">
-                        <img src="/images/news-1.png" alt="news-1" class="rounded-xl" />
+                        <img src="./images/news-1.png" alt="news-1" class="rounded-xl" />
                     </figure>
                     <div class="card-body ">
                         <p class="text-gray-400 font-medium">Feb 05, 2027</p>
@@ -265,7 +265,7 @@
                 </div>
                 <div class="card bg-base-100 shadow-xl">
                     <figure class="px-4 pt-4">
-                        <img src="/images/news-2.png" alt="news-2" class="rounded-xl" />
+                        <img src="./images/news-2.png" alt="news-2" class="rounded-xl" />
                     </figure>
                     <div class="card-body ">
                         <p class="text-gray-400 font-medium">Feb 05, 2027</p>
@@ -276,7 +276,7 @@
                 </div>
                 <div class="card bg-base-100 shadow-xl">
                     <figure class="px-4 pt-4">
-                        <img src="/images/news-3.png" alt="news-3" class="rounded-xl" />
+                        <img src="./images/news-3.png" alt="news-3" class="rounded-xl" />
                     </figure>
                     <div class="card-body">
                         <p class="text-gray-400 font-medium">Feb 05, 2027</p>
@@ -289,37 +289,36 @@
         </section>
     </main>
     <footer class="bg-gradient-to-l py-20 px-5 from-[#ff00001a] from-0% to-[#ff89381a] to-100%">
-        <div class="flex flex-col md:flex-row container items-center justify-between gap-7">
-            <div class="flex-1  lg:pl-9">
-                <img src="images/cup.png" alt="cup">
+        <div class="flex flex-col md:flex-row container items-center justify-around mb-20">
+            <div class=" flex-1 lg:pl-20">
+                <img src="./images/cup.png" alt="cup">
             </div>
 
-            <div class="flex flex-1 lg:pl-9 items-center gap-10">
+            <div class="flex flex-1 lg:pl-32 items-center gap-10">
                 <p>Ready to get started?</p>
                 <button class="btn bg-gradient-to-l from-gradient-start from-0% to-gradient-end to-100% text-white">Get
                     Started</button>
             </div>
         </div>
-        <div class="footer container text-base-content my-6">
+        <div class="footer container text-base-content my-6 place-items-center">
             <div>
-                <span class="footer-title">Services</span>
-                <a class="link link-hover">Branding</a>
-                <a class="link link-hover">Design</a>
-                <a class="link link-hover">Marketing</a>
-                <a class="link link-hover">Advertisement</a>
+                <span class="footer-title">Quick Links</span>
+                <a class="link  no-underline">Home</a>
+                <a class="link  no-underline">About Us</a>
+                <a class="link  no-underline">Insurance</a>
+                <a class="link  no-underline">Privacy Policy</a>
             </div>
             <div>
-                <span class="footer-title">Company</span>
-                <a class="link link-hover">About us</a>
-                <a class="link link-hover">Contact</a>
-                <a class="link link-hover">Jobs</a>
-                <a class="link link-hover">Press kit</a>
+                <span class="footer-title">Our Service</span>
+                <a class="link  no-underline">Life Insurance</a>
+                <a class="link  no-underline">Car Insurance</a>
+                <a class="link  no-underline">Health Insurance</a>
+                <a class="link  no-underline">House Insurance</a>
             </div>
             <div>
-                <span class="footer-title">Legal</span>
-                <a class="link link-hover">Terms of use</a>
-                <a class="link link-hover">Privacy policy</a>
-                <a class="link link-hover">Cookie policy</a>
+                <span class="footer-title">Help</span>
+                <a class="link  no-underline">FAQs</a>
+                <a class="link  no-underline">Contact Us</a>
             </div>
             <div>
                 <span class="text-2xl font-semibold pl-1">Subscribe to our <br> newsletter</span>
